--- a/spoon-intervals/pom.xml
+++ b/spoon-intervals/pom.xml
@@ -72,6 +72,35 @@
             <artifactId>gumtree-spoon-ast-diff</artifactId>
             <version>1.17</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.java-diff-utils</groupId>
+            <artifactId>java-diff-utils</artifactId>
+            <version>4.5</version>
+        </dependency>
+        <dependency>
+            <groupId>ghaffarian</groupId>
+            <artifactId>graphs</artifactId>
+            <version>2.5.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/graphs-2.5.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>ghaffarian</groupId>
+            <artifactId>nanologger</artifactId>
+            <version>1.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/nano-logger-1.1.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4</artifactId>
+            <version>4.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.6</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
